# mcj-portc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  build_windows_local.sh  character.c  chunk.c  chunk.h  common.h  font.c  keystore.base64  level_renderer.c  mobile_ui.c  mobile_ui.h  player.c  player.h  rubydung  rubydung-signed.apk.idsig  rubydung.c  rubydung.keystore  tesselator.c  textures.c  timer.c
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: character.c  chunk.c  chunk.h  common.h  level_renderer.c  mobile_ui.c  rubydung.c  textures.c  textures.h  timer.c
